# PersonTracker

./: .gitignore  README.md  pyproject.toml
mobile/: App.tsx  package-lock.json  package.json
server/: .env.example  .gitignore  __main__.py  pyproject.toml  requirements.txt
server/lib/: face_rec.py
server/src/: main.py
src/: __init__.py
web/: .gitignore  package-lock.json  package.json
web/src/app/: page.tsx
